# cvat-geospatial-scripts

./: .gitignore  LICENSE  README.md  geotiff2png.py  pyproject.toml  requirements.txt  xml2geotiff.py
src/geocvat/: geotiff2png.py  png2geotiff.py  xml2geotiff.py
