[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geocvat"
version = "1.0.1"
description = "CVAT Geospatial Tools - Scripts for converting between CVAT-compatible file formats and geospatial rasters"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Dakota Hester", email = "dh2306@msstate.edu"}
]


keywords = ["cvat", "geospatial", "geotiff", "computer-vision", "remote-sensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.8"
dependencies = [
    "opencv-python",
    "numpy",
    "pandas",
    "rasterio",
    "shapely",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/gcermsu/cvat-geospatial-scripts"
Repository = "https://github.com/gcermsu/cvat-geospatial-scripts"
Issues = "https://github.com/gcermsu/cvat-geospatial-scripts/issues"

[project.scripts]
geotiff2png = "geocvat.geotiff2png:main"
png2geotiff = "geocvat.png2geotiff:main"
xml2geotiff = "geocvat.xml2geotiff:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]